--- a/classes/OpportunityTriggerHandler.cls
+++ b/classes/OpportunityTriggerHandler.cls
@@ -2,7 +2,7 @@ public with sharing class OpportunityTriggerHandler {
     public static void beforeInsert(List<Opportunity> opportunityList) {
         if(!opportunityList.isEmpty()) {
             // changeOpportunityDescriptionForAmmount(opportunityList);
-            // changeOpportunityDescriptionForStage(opportunityList);
+            // changeOpportunityDescriptionForStage(opportunityList);   //Q2
         }
     }
 
@@ -12,28 +12,37 @@ public with sharing class OpportunityTriggerHandler {
 
     public static void beforeUpdate(List<Opportunity> newOpportunityList, Map<Id, Opportunity> newOpportunityMap, List<Opportunity> oldOpportunityList, Map<Id, Opportunity> oldOpportunityMap) {   //NOPMD
         if(!newOpportunityList.isEmpty()) {
-            // changeOpportunityDescriptionForStage(newOpportunityList);
+            // changeOpportunityDescriptionForStage(newOpportunityList);   //Q2
+            errorForClosedLostReason(newOpportunityList); //Q12
+            for(Opportunity opportunityObject : oldOpportunityList) {
+                // changeOpportunityDescriptionForStageRecursion(opportunityObject, '');   //26
+            }
         }
-        if(!oldOpportunityList.isEmpty()) { 
-            // errorForClosedLostReason(oldOpportunityList); //Q12
-        }
-        changeOpportunityDescriptionForStageRecursion(newOpportunityList);   //26    //Not Working
     }
 
     public static void afterUpdate(List<Opportunity> newOpportunityList, Map<Id, Opportunity> newOpportunityMap, List<Opportunity> oldOpportunityList, Map<Id, Opportunity> oldOpportunityMap) {    //NOPMD
         if(!newOpportunityList.isEmpty()) {
             // updateOpportunityTask(newOpportunityList, oldOpportunityList); //Q7
         }
-
     }
 
-    public static void beforeDelete(List<Opportunity> oldList) {    //NOPMD   
-        // checkUserCanDeleteOpportunityOrNot(oldList);    //Q14
+    public static void beforeDelete(List<Opportunity> oldOpportunityList, Map<Id, Opportunity> oldOpportunityMap) {    //NOPMD   
+        if(!oldOpportunityList.isEmpty()) {
+            // checkUserCanDeleteOpportunityOrNot(oldOpportunityList);    //Q14
+            OpportunityService.updateAccountAnnualRevenue(oldOpportunityList); //Q23
+        }
     }
 
-    public static void afterDelete(List<Account> oldList) { //NOPMD
+    public static void afterDelete(List<Opportunity> oldOpportunityList) { //NOPMD
         
     }
+
+    public static void afterUndelete(List<Opportunity> newOpportunityList, Map<Id, Opportunity> newOpportunityMap) { //NOPMD
+        if(!newOpportunityList.isEmpty()) {
+            OpportunityService.updateAccountAnnualRevenue(newOpportunityList); //Q23
+        }
+    }
+
 
     public static void changeOpportunityDescriptionForAmmount(List<Opportunity> opportunityList) {
         for(Opportunity opportunity : opportunityList) {
@@ -53,22 +62,18 @@ public with sharing class OpportunityTriggerHandler {
                 opportunity.Description = 'Opp is Open';
             }
         }
+        
     }
 
-    //Not Working
-    public static void changeOpportunityDescriptionForStageRecursion(List<Opportunity> newOpportunityList) {
-        for(Opportunity opportunity : newOpportunityList) {
-            if(opportunity.StageName == 'Closed Won') {
-                opportunity.Description = 'Opp is Closed Won';
-            } else if(opportunity.StageName == 'Closed Lost') {
-                opportunity.Description = 'Opp is Closed Lost';
-            } else {
-                // List<Opportunity> opportunityList = new List<Opportunity>(newOpportunityList);
-                // opportunityList.remove(0);
-                // List<Opportunity> newOpportunityListAfterRemove = new List<Opportunity>(opportunityList);
-                // changeOpportunityDescriptionForStageRecursion(newOpportunityListAfterRemove);
-            }
+    public static void changeOpportunityDescriptionForStageRecursion(Opportunity opportunity, String newDescription) {
+        if(opportunity.StageName == 'Closed Won') {
+            opportunity.Description = 'Opp is Closed Won';
+        } else if(opportunity.StageName == 'Closed Lost') {
+            opportunity.Description = 'Opp is Closed Lost';
+        } else {
+            changeOpportunityDescriptionForStageRecursion(opportunity, 'Other than Close Won and Closed Lost');
         }
+        update opportunity;
     }
 
 
@@ -86,20 +91,16 @@ public with sharing class OpportunityTriggerHandler {
 
     public static void errorForClosedLostReason(List<Opportunity> oldOpportunityList) {
         for(Opportunity opportunity : oldOpportunityList) {
-            if(opportunity.StageName == 'Closed Lost') {
-                if(String.isBlank(opportunity.Closed_Lost_Reason__c)) {
-                    // opportunity.Closed_Lost_Reason__c = 'Please populate Closed Lost Reason';
-                    // Opportunity actualRecord = opportunity.Id; 
-                    opportunity.adderror('Please populate Closed Lost Reason');
-                }
+            if(opportunity.StageName == 'Closed Lost' && String.isBlank(opportunity.Closed_Lost_Reason__c)) {
+                    opportunity.Closed_Lost_Reason__c.adderror('Please populate Closed Lost Reason');
             }
         }
     }
 
-    public static void checkUserCanDeleteOpportunityOrNot(List<Opportunity> oldList) {
+    public static void checkUserCanDeleteOpportunityOrNot(List<Opportunity> oldOpportunityList) {
         Id profileId = Userinfo.getProfileId();  
         Profile profilname = [SELECT Name FROM Profile WHERE Id =: profileId];  //NOPMD
-        for(Opportunity opportunity : oldList) {
+        for(Opportunity opportunity : oldOpportunityList) {
             if(opportunity.CloseDate <= System.today() && profilname.Name != 'System Administrator') {
                 opportunity.addError('No Access for Deletion');
                 break;
